# curlybot

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: astring.h  querystring.h  urlencode.h
src/: astring.c  curlybot.c  querystring.c  urlencode.c
